# NDK_OpenGLES_3_0

./: build.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt
